set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
FIND_PACKAGE(Boost REQUIRED COMPONENTS system thread)

if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    add_executable(client1/client.out client.cpp client.hpp)
    add_executable(client2/client.out client.cpp client.hpp)
    add_executable(server/server.out server.cpp connection.cpp server.hpp connection.hpp)
    target_link_libraries(client1/client.out ${Boost_LIBRARIES})
    target_link_libraries(client2/client.out ${Boost_LIBRARIES})
    target_link_libraries(server/server.out ${Boost_LIBRARIES})
endif()
